# symposium-acp

./: Cargo.toml  README.md  book.toml  justfile
.github/workflows/: mdbook.yml  release-binaries.yml  release-plz.yml
md/: introduction.md
src/decaf/: Cargo.toml
src/decaf/src/: lib.rs
src/elizacp/: CHANGELOG.md  Cargo.toml
src/sacp/: CHANGELOG.md  Cargo.toml  README.md
src/sacp-conductor/: CHANGELOG.md  Cargo.toml
src/sacp-conductor/tests/: arrow_proxy_eliza.rs  empty_conductor_eliza.rs  initialization_sequence.rs  mcp-integration.rs  nested_arrow_proxy.rs  nested_conductor.rs  scoped_mcp_server.rs  test_mcp_tool_output_types.rs  test_session_id_in_mcp_tools.rs  test_tool_enable_disable.rs  test_tool_fn.rs  trace_client_mcp_server.rs  trace_generation.rs  trace_mcp_tool_call.rs  trace_snapshot.rs
src/sacp-cookbook/: CHANGELOG.md  Cargo.toml
src/sacp-cookbook/src/: lib.rs
src/sacp-derive/: CHANGELOG.md  Cargo.toml
src/sacp-rmcp/: CHANGELOG.md  Cargo.toml
src/sacp-test/: CHANGELOG.md  Cargo.toml
src/sacp-test/src/: lib.rs  test_binaries.rs  testy.rs
src/sacp-tokio/: CHANGELOG.md  Cargo.toml
src/sacp-tokio/tests/: debug_logging.rs
src/sacp-trace-viewer/: CHANGELOG.md  Cargo.toml
src/sacp/src/: lib.rs  session.rs
src/sacp/src/mcp_server/: builder.rs
src/sacp/src/schema/: enum_impls.rs  mod.rs
src/sacp/src/schema/client_to_agent/: requests.rs
src/sacp/tests/: jsonrpc_error_handling.rs
src/yopo/: CHANGELOG.md  Cargo.toml
