[package]
name = "decaf"
version = "11.0.0-alpha.1"
edition = "2024"
description = "Debouncing proxy for ACP - coalesces agent message chunks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"

[dependencies]
sacp = { version = "11.0.0-alpha.1", path = "../sacp" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
sacp-test = { path = "../sacp-test" }
