[package]
name = "sacp"
version = "11.0.0"
edition = "2024"
description = "Core protocol types and traits for SACP (Symposium's extensions to ACP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "protocol", "ai"]
categories = ["development-tools"]

[features]
default = []

# Forward unstable features from agent-client-protocol-schema.
# Enable these to get support for the corresponding unstable ACP methods.
unstable = [
    "unstable_session_model",
    "unstable_session_fork",
    "unstable_session_resume",
    "unstable_session_close",
]
unstable_session_model = ["agent-client-protocol-schema/unstable_session_model"]
unstable_session_fork = ["agent-client-protocol-schema/unstable_session_fork"]
unstable_session_resume = ["agent-client-protocol-schema/unstable_session_resume"]
unstable_session_close = ["agent-client-protocol-schema/unstable_session_close"]

[dependencies]
agent-client-protocol-schema.workspace = true
sacp-derive = { version = "11.0.0", path = "../sacp-derive" }
anyhow.workspace = true
boxfnonce.workspace = true
futures.workspace = true
futures-concurrency = "7.6.3"
rustc-hash.workspace = true
jsonrpcmsg.workspace = true
rmcp = { workspace = true, features = ["server"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
expect-test.workspace = true
shell-words = "1.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "time", "process"] }
tokio-util.workspace = true
sacp-test = { path = "../sacp-test" }
